Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81097

When the tab order is explicitly set then Backtabbing might not work correctly

XMLWordPrintable

    • bb42b7d8b2fe8508074bc4574679893c6cf4fbd5 (qt/qtbase/5.14) 64c578bc1529c8217ea19d09e3be6bf44e1a6a06 (qt/tqtc-qtbase/tqtc/lts-5.15) 00505ed2b57d0a6911c8274af2bff883a93f583a (qt/tqtc-qtbase/6.1)

      When the tab order is explicitly set then Backtabbing might not work correctly. Using tab works fine between the widgets specified, but it is possible when shift-tabbing that it gets stuck in a widget like QDoubleSpinBox and does not move out of it.

        1. qtbug81097.tar.gz
          2 kB
          Andy Shaw
        2. reversed_tab_order.ui
          1 kB
          Irfan Omair
        For Gerrit Dashboard: QTBUG-81097
        # Subject Branch Project Status CR V

            ivan.solovev Ivan Solovev
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes